<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_videos"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/minimize"
        android:icon="@drawable/ic_baseline_keyboard_arrow_down_24"
        android:title="@string/minimize"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort_by_last_viewed_desc"
        android:title="@string/sort_by_last_viewed_desc"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_by_most_viewed_desc"
        android:title="@string/sort_by_most_viewed_desc"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never" />



</menu>